<resources>
    <string name="app_name">Get Movies</string>
    <string name="error_message">\"Sem internet\"</string>
    <string name="action_top">Mais Votados</string>
    <string name="action_pop">Popular</string>
    <string name="action_calendar">Data do Lançamento</string>
    <string name="action_rate">Nota atribuida</string>
    <string name="action_banner">Capa do filme</string>
    <string name="error_indisponivel">Indiponibilidade de buscar os filmes</string>
    <string name="error_internet">\"Ative sua conexão de dados ou WIFI</string>
    <string name="error_request">Erro na requisição</string>
    <string name="action_top_rated_tool">Melhores Avaliados</string>
    <string name="action_popular_tool">Populares</string>
    <string name="action_movie_id">Específico</string>
    <string name="action_similar">Similares</string>
    <string name="error_addFavorite">Erro ao adicionar filme aos favoritos. Revise os dados!</string>
    <string name="excluirFavorites">Excluir</string>
</resources>
