<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_top_rated"
        android:contentDescription="@string/action_top"
        android:enabled="true"
        android:icon="@drawable/ic_action_rating"
        android:iconTint="@color/primaryTextColor"
        android:orderInCategory="2"
        android:title="@string/action_top_rated_tool"
        android:tooltipText="@string/action_top_rated_tool"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_popular"
        android:contentDescription="@string/action_pop"
        android:enabled="true"
        android:icon="@drawable/ic_action_popular"
        android:orderInCategory="2"
        android:title="@string/action_pop"
        android:tooltipText="@string/action_popular_tool"
        app:showAsAction="ifRoom" />
</menu>