<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        tools:context=".MoviesDetailActivity">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/action_banner"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_lacamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/tv_voting"
            android:layout_width="39dp"
            android:layout_height="19dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/action_rate"
            app:layout_constraintEnd_toStartOf="@+id/tv_voting"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/ic_action_rate" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/action_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:srcCompat="@drawable/ic_action_calendar2" />

        <Button
            android:id="@+id/btnSimilares"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:text="Similares"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <Button
            android:id="@+id/btnFavorites"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:text="Favoritos"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintStart_toEndOf="@+id/btnSimilares"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <Button
            android:id="@+id/btnImdb"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Imdb"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFavorites"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>